(library
 (public_name mullos)
 (libraries base sedlex zarith camomile batteries menhirLib)
 (modules poly lexer parser elab syntax aux env location)
 (preprocess
  (pps sedlex.ppx)))

(menhir
 (flags --explain)
 (modules parser))

(env
 (dev
  (flags
   (:standard -w +a-4)
   (:standard -warn-error -a+31))))
